--- a/paw/flask/templates/index.html
+++ b/paw/flask/templates/index.html
@@ -3,55 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>Website</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
     <div class="sidebar">
         <h2>Tabs</h2>
-        <a href="#">Home</a>
-        <a href="#">Learning</a>
-        <a href="#">Forks</a>
-        <a href="#">Settings</a>
-        <a href="#">About</a>
-        <a href="#">Credits</a>
-        <a href="#">Logs</a>
+        <a href="/home" class="tab-link">Home</a>
+        <a href="/settings" class="tab-link">Settings</a>
+        <!-- adds the other tabs -->
     </div>
 
-    <div class="main">
-        <!-- <div class="card"> // To be used as a template for future additions to the website
-            <h3>Appearance Settings</h3>
-            <p>Adjust your theme, icons, and window behavior.</p>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider"></span>
-            </label> Dark Mode
-        </div>
-        <div class="card">
-            <h3>Behavior Settings</h3>
-            <p>Customize window focus, animations, and workspace behavior.</p>
-            <label class="switch">
-            <input type="checkbox" checked>
-            <span class="slider"></span>
-            </label> Animations
-        </div> -->
-<div class="card">
-    <h3>Broadcast</h3>
-    <p>Customize window focus, animations, and workspace behavior.</p>
+    <div class="main" id="page-content">
+        <!-- content will be loaded here -->
+    </div>
 
-    <form action="/your-action" method="post">
-        <label class="switch">
-        </label>
-        <button type="submit">Broadcast</button>
-    </form>
-</div>
     <h6 id="footer">
         @2026 Heath Nathan Poulsen | Heathp3881@qackids.org, all rights reserved.
     </h6>
     <h6 id="version">
         0.1.0-alpha
     </h6>
-    </div>
 
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 </html>
