--- a/paw/flask/templates/index.html
+++ b/paw/flask/templates/index.html
@@ -11,6 +11,7 @@
         <h2>Tabs</h2>
         <a href="/home" class="tab-link">Home</a>
         <a href="/settings" class="tab-link">Settings</a>
+        <a href="/notes" class="tab-link">Notes</a>
         <!-- adds the other tabs -->
     </div>
 
