--- a/paw/flask/templates/settings.html
+++ b/paw/flask/templates/settings.html
@@ -1,6 +1,6 @@
 <div class="card">
-    <h3>Appearance Settings</h3>
-    <p>Adjust your theme, icons, and window behavior.</p>
+    <h3>Dark Mode</h3>
+    <p>(insert super cool parapgrah here explaining what dark mode is)</p>
     <label class="switch">
         <input type="checkbox">
         <span class="slider"></span>
@@ -8,10 +8,10 @@
 </div>
 
 <div class="card">
-    <h3>Behavior Settings</h3>
-    <p>Customize window focus, animations, and workspace behavior.</p>
+    <h3>Placeholder</h3>
+    <p>"Aaaah the settings don't work what am I ever going to do with my lif-" shut. Shut, shut.. Shut it, shut.</p>
     <label class="switch">
         <input type="checkbox" checked>
         <span class="slider"></span>
-    </label> Animations
+    </label> Placeholder Text
 </div>
